--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ html {
 }
 
 .image{
-  width: 200px;
-  height: 150px;
+  width: 500px;
+  height: 450px;
 }
 
 #map iframe
@@ -134,4 +134,8 @@ color: #ff7700;
   position: sticky;
   top: 0;
   z-index: 99999;
+}
+
+.img_modal{
+  border-radius: 20px;
 }
