--- a/style.css
+++ b/style.css
@@ -1,33 +1,141 @@
-#start-btn
+#b {
+    
+    background: linear-gradient( rgb(255, 255, 255) 25%, rgb(255, 221, 0) , rgb(138, 2, 0), rgb(18, 18, 18));
+}
+
+
+html {
+ scroll-behavior: smooth;
+}
+
+.image{
+  width: 500px;
+  height: 450px;
+}
+
+#map iframe
 {
-    width: 40%;
+    width: 50%;
+    float: left;
+    padding-top: 5px;
+}
+
+.contact_1 h3
+{
+    display: inline;
+}
+.contact_1 a
+{
+    text-shadow: none;
+}
+
+#footer{
+  height: 20px;
+  background-color:white;
+  }
+
+input
+{
+    background: grey
+}
+
+.announcement{
+background-color:#337ab7;
+width: 100%;
+height: 30px;
+}
+
+#marqueeStyle{
+  width:100%;
+  direction:right;
+  height:100px;
+  color: beige;
+  font-size:120%;
+}
+
+#video{
+  width:100%;
+  height:500px;
+  border: none;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.travel_mainDiv
+{
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+  border: 1px solid #c7c7c7;
+}
+
+.travel_mainDiv img
+{
+  width: 100%;
+  height:300px;
 } 
-#camera
+
+.travel_mainDiv hr
 {
-    width:360px;
-    height: 250px;
-    border:1px solid grey;
+    width: 100%; 
 }
 
-#textbx
+.travel_mainDiv h5 , .travel_mainDiv p
 {
-    width: 300px;
+margin-left: 20px;
 }
 
-#not_so_frozen_after_work {
-    width: 100px;
-    height: 80px;
-    border-radius: 25px;
+
+#achievementsID{
+ padding-bottom: 10px;
 }
 
-.R {
-    border-color: black;
-   width: 400px ;
-   height: 200px;
-   box-shadow: 0px 8px 6px 0px black;
+.movie_head
+{
+    font-size: 20px;
+    padding: 6px 22px;
+    border-radius: 10px;
+    margin-bottom: 15px;
+    width: 100%;
+    display: inline-block;
 }
 
-.R:hover {
-    border-radius:140px;
-    box-shadow: 0px 8px 6px 0px rgb(255, 0, 0);
+.movie_head i
+{
+float: right;
+}
+
+.movie_text span
+{
+color: #ff7700;
+}
+
+.img {
+ width:500;
+    height:250;
+}
+
+#new {
+  color: #000000;
+}
+
+.header {
+  background-color: #f1f1f1;
+  padding: 30px;
+  text-align: center;
+}
+
+.my_nav_bar {
+  position: sticky;
+  top: 0;
+  z-index: 99999;
+}
+
+.img_modal{
+  border-radius: 20px;
 }
